After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 736085 - Keyring 3.12 is broken for password-less accounts
Keyring 3.12 is broken for password-less accounts
Status: RESOLVED FIXED
Product: gnome-keyring
Classification: Core
Component: pam
3.12.x
Other Linux
: Normal major
: ---
Assigned To: GNOME keyring maintainer(s)
GNOME keyring maintainer(s)
3.14
Depends on:
Blocks:
 
 
Reported: 2014-09-04 23:47 UTC by Cosimo Cecchi
Modified: 2014-09-05 16:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gkr-pam-module: Don't use password to determine whether this is a login (2.48 KB, patch)
2014-09-05 00:11 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Cosimo Cecchi 2014-09-04 23:47:43 UTC
Commit https://git.gnome.org/browse/gnome-keyring/commit/?id=43e71fef72da611bf6f806c3769a19e1c92c50bd seems to have broken the keyring for password-less accounts.

With that patch, the keyring-daemon will not be correctly started by the PAM module when logging in. It seems that the current behavior of the code after that patch in fact contradicts a comment a few lines below, where --login is indicated as required even for password-less account: https://git.gnome.org/browse/gnome-keyring/tree/pam/gkr-pam-module.c#n539
Comment 1 Jasper St. Pierre (not reading bugmail) 2014-09-05 00:11:26 UTC
Created attachment 285442 [details] [review]
gkr-pam-module: Don't use password to determine whether this is a login

NULL or empty passwords are also valid passwords, so add a separate flag
to determine whether to pass --login.
Comment 2 Stef Walter 2014-09-05 07:02:54 UTC
Review of attachment 285442 [details] [review]:

This looks good to me. Thanks!