gkr-pam-module: Don't use password to determine whether this is a login

NULL or empty passwords are also valid passwords, so add a separate flag
to determine whether to pass --login.

https://bugzilla.gnome.org/show_bug.cgi?id=736085